2006-10-05  Don Gibson  <dgibson77@gmail.com>

Reviewed by Adam.

        http://bugs.webkit.org/show_bug.cgi?id=11138
        Incorrect mouse event generation on Windows

        * platform/win/MouseEventWin.cpp:
        (WebCore::PlatformMouseEvent::PlatformMouseEvent):
        (1) Set mouse button even for non-click-related messages.
        (2) Track clicks correctly for all buttons, not just the left button.



Canonical link: https://commits.webkit.org/14112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@16811 268f45cc-cd09-0410-ab3c-d52691b4dbfc